Corrects alignment of project status icons on dashboard.

--- a/assets/sass/projects/_styles.sass
+++ b/assets/sass/projects/_styles.sass
@@ -78,14 +78,13 @@
         color: #2e96db
     .icons
       height: 66px
-      padding-left: 2px
+      text-align: center
       a
-        margin: 11px 0 0 11px
-        width: 40px
-        height: 40px
+        margin: 11px 0 0 6px
+        width: 44px
+        height: 44px
         border: 3px solid #2e96db
         border-radius: 100%
-        float: left
         display: inline-block
         &:hover
           border: 3px solid #1e56bb
